Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32332

Scrollbar matching text markers incorrectly positioned when code folded

XMLWordPrintable

    • 896739d13 (master)

      The horizontal lines on scrollbars indicating where "Find" occurrences are in the text document don't take into account any folded code.

      Steps to reproduce
      1. Open a large .cpp file where the first third of the file is inside a namespace.
      2. Collapse the namespace
      3. Press Ctrl+F and enter a term that is found only in the middle third of the document.
      Expected results

      The scrollbar thumb slider should overlap the markers while the text matches are shown in the document viewport.

      Actual results

      The scrollbar markers are drawn too low. The scrollbar slider does not overlap with them when the text matches are visible in the document viewport, and the text matches are not seen in the viewport if the slider is dragged down to overlap the markers.

        For Gerrit Dashboard: QTCREATORBUG-32332
        # Subject Branch Project Status CR V

            davschul David Schulz
            ryan.cuthbertson Ryan Cuthbertson
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes