Editor: fix highlighting of search results in scrolbar

the QTextBlock::firstLine function takes into account whether previous
blocks are visible.

Fixes: QTCREATORBUG-32332
Change-Id: Id0d16274202d46d62f7cf0a1919e86dc82c58fc8
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>